--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,9 @@
 {
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "target": "ES6",                                 // Modern JavaScript features
-    "lib": ["DOM", "ES6", "DOM.Iterable", "ScriptHost"], // Libraries to include
-    "jsx": "react-jsx",                              // JSX support for React
-    "module": "ESNext",                              // Use ESNext modules
-    "moduleResolution": "node",                      // Module resolution strategy
-    "strict": true,                                  // Enable all strict type-checking options
-    "esModuleInterop": true,                         // Enables emit interoperability between CommonJS and ES Modules
-    "allowSyntheticDefaultImports": true,            // Allow default imports from modules with no default export
-    "forceConsistentCasingInFileNames": true,        // Disallow inconsistently-cased references to the same file
-    "baseUrl": ".",                                   // Base directory for non-relative module names
-    "paths": {
-      "~*": ["./*"]                                   // Alias '~' to the project root
-    },
-    "skipLibCheck": true                              // Skip type checking of declaration files
+    "jsx": "react-jsx",
   },
-  "exclude": ["node_modules"],                        // Exclude dependencies
-  "include": ["entrypoints/**/*", "types/**/*", "component"]               // Include source and type definition files
+  "extends": "./.wxt/tsconfig.json",
+  "exclude": ["node_modules"],
+  "include": ["entrypoints/**/*", "types/**/*", "component"]
 }
