minor issues are resolved

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Linkreply",
+  "name": "linkreply",
   "description": "A AI mode to answer al your connection's messages",
   "private": true,
   "version": "0.0.0",
